 - Added 'AddScriptCss' extension
 - Added 'ParserTools' extension
==========
REL1_10_4:
- Added 'AutoLanguage' extension
- Added 'ParserPhase2' extension
- Added 'source' tag to geshi extension
- Adjusted 'revision id' information provided through extension credits (Special:Version) on most extensions
- Fixed 'SidebarEx' extension for 'garbage' appearing when 'Sidebar/$group' page does not exist
- Added 'undelete' as namespace independant right for addressing 'Special:Undelete' use-cases
- Fixed 'Pager.php' to support 'page_namespace' related queries as well as 'user' table related ones
-- Addresses 'Special:Listusers' special page issue
- Enhanced 'SpecialPagesManager' extension with a standard MW special for updating the
  BizzWiki special pages by reading the filesystem '/SpecialPages' directory.
=========
REL1_10_5:
- FileManager: Added PHP error suppression for file_get_contents upon initial page creation
- FormProc: added functionality enabling defining a class for form processing
- Added BizzWiki release identifier in global define 'BIZZWIKI'
- SecureHTML: added namespace exemption list functionality
- SecureProperties: added namespace exemption list functionality
- Corrected geshi, extensionclass, addscriptcss for PHP warnings (usage of deprecated PHP features)
- Adjusted 'url' field in extensions' credits
- ParserPhase2: Fixed client side caching logic due to a bug in PHP's preg_match_all function
- ExtensionClass: added 'AutoMethods' for initializing a derived class's hooks, parser functions & magic words automatically
- ExtensionClass: added support for adding 'head' and 'body' scripts links whilst preserving parser caching coherency.
- Added 'CacheTools' extension
- Added more documentation in BizzWikiSettings.php
- Added BizzWiki logo design files
==========
REL1_10_6:
- Integrated 'ParserFunctions'
- Integrated 'StringFunctions'
- ParserPhase2: added 'foreachx','forx' ,'gset' and 'gget' functions
- Added 'ForeachFunctions' extension
-